--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     #build: .
     #image: skionus/vertx-mid:dev
     image: vertx-mid:dev
-    restart: unless-stopped
+    #restart: unless-stopped
     ports:
       - 8080:8080
