--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,18 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.release>17</maven.compiler.release>
 
-    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-    <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
-    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-    <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
+    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+    <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
+    <maven-surefire-plugin.version>3.3.1</maven-surefire-plugin.version>
+    <exec-maven-plugin.version>3.3.0</exec-maven-plugin.version>
 
-    <vertx.version>4.4.4</vertx.version>
-    <junit-jupiter.version>5.9.1</junit-jupiter.version>
+    <vertx.version>4.5.8</vertx.version>
+    <mutiny-vertx.version>3.13.2</mutiny-vertx.version>
+    <hibernate-reactive.version>1.1.9.Final</hibernate-reactive.version>
+    <hibernate.version>6.5.2.Final</hibernate.version>
+    <junit-jupiter.version>5.10.3</junit-jupiter.version>
 
     <main.verticle>com.lumen.vertx.MainVerticle</main.verticle>
     <launcher.class>io.vertx.core.Launcher</launcher.class>
@@ -35,7 +39,7 @@
       <dependency>
         <groupId>io.smallrye.reactive</groupId>
         <artifactId>vertx-mutiny-clients-bom</artifactId>
-        <version>3.5.0</version>
+        <version>${mutiny-vertx.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -81,17 +85,17 @@
     <dependency>
       <groupId>org.hibernate.reactive</groupId>
       <artifactId>hibernate-reactive-core</artifactId>
-      <version>1.1.9.Final</version>
+      <version>${hibernate-reactive.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.14.2</version>
+      <version>2.17.2</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.4.6</version>
+      <version>1.5.6</version>
     </dependency>
 
   </dependencies>
@@ -102,7 +106,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <release>17</release>
+          <release>${maven.compiler.release}</release>
         </configuration>
       </plugin>
       <plugin>
