--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     ports:
       - 8080:8080
     environment:
-      APP_BIND_ADDRESS: "0.0.0.0"
-      APP_BIND_PORT: "8080"
-      DATABASE_URI: "192.168.57.35:5432"
-      DATABASE_NAME: "mytest_azure"
-      PERSISTENCE_UNIT_NAME: "atarcDS"
+      - APP_BIND_ADDRESS=0.0.0.0
+      - APP_BIND_PORT=8080
+      - DATABASE_URI=192.168.57.35:5432
+      - DATABASE_NAME=mytest_azure
+      - PERSISTENCE_UNIT_NAME=atarcDS
