--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,9 @@ services:
   vertx:
     container_name: vertx
     #build: .
-    #image: skionus/vertx-mid:dev
-    image: vertx-mid:pg
+    image: vertx-mid:dev
+    # image: skionus/vertx-mid:dev
+    # image: vertx-mid:pg
     #restart: unless-stopped
     ports:
       - 8080:8080
